fixed layout issues

--- a/angular/src/app/icecreams/detail/detail.component.scss
+++ b/angular/src/app/icecreams/detail/detail.component.scss
@@ -6,7 +6,7 @@ h3 {
 h2 {
   padding-left: 10px;
   color: darkgray;
-  padding-top: 0.5em;
+  padding-top: 0.65em;
 }
 
 h1 {
